codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(rendered)
---
• Reviewing 2 approval requests (0s • esc to interrupt)
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'


› Ask Motyga to do anything

  gpt-5.5 default · /tmp/project
